helm/meeting-room-reservation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meeting-room-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /reservations
        pathType: Prefix
        backend:
          service:
            name: reservationService
            port:
              number: 5003
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: userService
            port:
              number: 5001
      - path: /rooms
        pathType: Prefix
        backend:
          service:
            name: salleService
            port:
              number: 5002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 5000
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
